force-app/main/default/objects/Convert_Document_Folder_to_Library__c/Convert_Document_Folder_to_Library__c.object-meta.xml
<CustomObject>
    <description>Represents metadata, permissions, and cross-references for converting Document Folders to Content Libraries. Records are created and updated by Apex batch jobs.</description>
    <label>Convert Document Folder to Library</label>
    <nameField>
        <displayFormat>F2L-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convert Document Folders to Libraries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>