force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Folder_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Developer_Name__c</fullName>
    <description>Developer Name of the original Document Folder. By storing this data, we avoid extra code and SOQL queries in the batch jobs.</description>
    <inlineHelpText>Developer Name of the original Document Folder.</inlineHelpText>
    <label>Folder Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>