force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Folder_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Document Folder ID to convert to Content Library.</description>
    <externalId>true</externalId>
    <inlineHelpText>Document Folder ID to convert to Content Library.</inlineHelpText>
    <label>Folder ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>