force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <description>Name of the original Document Folder. By storing this data, we avoid extra code and SOQL queries in the batch jobs.</description>
    <inlineHelpText>Name of the original Document Folder.</inlineHelpText>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>