force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Group_IDs__c.field-meta.xml
<CustomField>
    <fullName>Group_IDs__c</fullName>
    <description>Comma-delimited list of Group IDs derived from the DocumentFolder sharedTo entries from Metadata API. https://developer.salesforce.com/docs/atlas.en-us.api_meta.meta/api_meta/meta_folder.htm</description>
    <inlineHelpText>Comma-delimited list of Group IDs derived from the DocumentFolder sharedTo entries from Metadata API.</inlineHelpText>
    <label>Group IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>