force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Library_ID__c.field-meta.xml
<CustomField>
    <fullName>Library_ID__c</fullName>
    <description>Content Library ID (ContentWorkspace) created for converting the document folder to a library.</description>
    <inlineHelpText>Content Library ID (ContentWorkspace) created for converting the document folder to a library.</inlineHelpText>
    <label>Library ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>