force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Library_Permission_ID__c.field-meta.xml
<CustomField>
    <fullName>Library_Permission_ID__c</fullName>
    <description>The content library permission to grant to members of the new library. In Setup menu in Classic UI, find "Content Permissions". Learn more about content library management at https://help.salesforce.com/articleView?id=collab_files_library_folders.htm</description>
    <inlineHelpText>The content library permission to grant to members of the new library.</inlineHelpText>
    <label>Library Permission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>