force-app/main/default/objects/Convert_Document_Folder_to_Library__c/fields/Library_Public_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Library_Public_Group_ID__c</fullName>
    <description>Content Libraries can only be shared to User IDs and Public Group IDs. This ID is a Public Group that represents the same membership of all the groups and roles shared to the original Document Folder.</description>
    <inlineHelpText>Content Libraries can only be shared to User IDs and Public Group IDs. This ID is a Public Group that represents the same membership of all the groups and roles shared to the original Document Folder.</inlineHelpText>
    <label>Library Public Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>