force-app/main/default/objects/Convert_Document_Folder_to_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Folder_ID__c</columns>
    <columns>Library_Permission_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>